--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,5 +1,5 @@
 .wg-cart {
-    padding: 32px;
-    color: white;
-    background-color: #31b572;
+    padding: 40px;
+    color: rgb(71, 150, 123);
+    background-color: brown;
 }
